# state_estimation

./: CMakeLists.txt  README.md  package.xml
bag/: 1hz.bag  1hz_2.bag  2023-10-06-21-36-27.bag  EIF_1.bag  EIF_2.bag  HEIF.bag  HEIF_b.bag  HEIF_nofb.bag  QP.bag  SEIF_noAcc.bag  SEIF_withAcc.bag  SHEIF_10hz.bag  SHEIF_15hz.bag  SHEIF_30hz.bag  SHEIF_3hz.bag  SHEIF_5hz.bag  TEIF_tol001.bag  TEIF_tol003.bag  TEIF_tol005.bag  all_3hz.bag  noQP.bag  plot.py
include/: EIFpairs_ros.h  GT_measurement_ros.h
include/state_estimation/: Camera.h  CommonFuncs.h  EIF.h  EIFpairs_ros.h  Eif.h  GT_measurement_ros.h  HEIF.h  HEIF_self.h  HEIF_target.h  Mav.h  REIF.h  SEIF.h  SEIF_neighbors.h  SEIF_pose.h  TEIF.h
launch/: consensusEstimation.launch  estimation.launch  singleEstimation.launch
msg/: EIFpairStamped.msg  Int32MultiArrayStamped.msg  Plot.msg  RMSE.msg
node/: consensus_state_estimation.cpp  consensus_state_estimation.cpp.backup  imageSync.cpp  image_process.cpp  self_msg_sync.cpp  state_estimation.cpp
src/: Camera.cpp  CommonFuncs.cpp  EIF.cpp  EIFpairs_ros.cpp  Eif.cpp  GT_measurement_ros.cpp  HEIF.cpp  HEIF_self.cpp  HEIF_target.cpp  Mav.cpp  REIF.cpp  SEIF.cpp  SEIF_neighbors.cpp  SEIF_pose.cpp  TEIF.cpp
src/EIF_related/: EIF.cpp  HEIF_self.cpp  SEIF_neighbors.cpp  SEIF_pose.cpp  TEIF.cpp
src/ROSmsg_related/: EIFpairs_ros.cpp  GT_measurement_ros.cpp  Mav.cpp
